--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -46,29 +46,31 @@
     "scroll-into-view-if-needed": "^2.2.20"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17",
-    "styled-components": "4.x"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "styled-components": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/big-design-theme": "^0.0.1",
     "@bigcommerce/configs": "^0.5.0",
     "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.5",
-    "@types/jest": "^24.0.11",
+    "@testing-library/react": "^8.0.7",
+    "@types/jest": "^24.0.16",
     "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-test-renderer": "^16.0.2",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-test-renderer": "^16.8.3",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^24.5.0",
     "babel-plugin-styled-components": "^1.10.6",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
@@ -79,7 +81,10 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.22.0",
-    "styled-components": "^4.1.3"
+    "rollup-plugin-typescript2": "^0.22.1",
+    "styled-components": "^4.1.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.5.3",
+    "typescript-styled-plugin": "^0.14.0"
   }
 }
