--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@commitlint/config-conventional": "^8.1.0",
     "husky": "^3.0.2",
     "lerna": "^3.16.4"
+  },
+  "resolutions": {
+    "**/react-live/prism-react-renderer": "^1.0.2"
   }
 }
