--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -29,12 +29,16 @@
     ]
   },
   "dependencies": {
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.0",
+    "@babel/standalone": "^7.7.3",
     "@bigcommerce/big-design": "^0.13.0",
     "@bigcommerce/big-design-icons": "^0.5.0",
     "@bigcommerce/big-design-theme": "^0.3.0",
     "clipboard-copy": "^3.1.0",
     "next": "^9.0.3",
-    "prism-react-renderer": "^0.1.7",
+    "prettier": "^1.16.4",
+    "prism-react-renderer": "^1.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-live": "^2.2.0",
@@ -43,10 +47,10 @@
   "devDependencies": {
     "@bigcommerce/configs": "^0.8.0",
     "@types/gtag.js": "^0.0.2",
+    "@types/prettier": "^1.18.3",
     "@types/styled-components": "^4.1.12",
     "babel-plugin-styled-components": "^1.10.6",
     "jsx-to-string-loader": "^1.2.0",
-    "prettier": "^1.16.4",
     "push-dir": "^0.4.1",
     "tslint": "^5.14.0",
     "typescript": "^3.7.2",
