--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -36,7 +36,6 @@
     "@bigcommerce/big-design-icons": "^0.5.2",
     "@bigcommerce/big-design-theme": "^0.3.1",
     "clipboard-copy": "^3.1.0",
-    "next": "^9.0.3",
     "prettier": "^1.16.4",
     "prism-react-renderer": "^1.0.2",
     "react": "^16.8.4",
@@ -46,11 +45,13 @@
   },
   "devDependencies": {
     "@bigcommerce/configs": "^0.8.1",
+    "@bigcommerce/examples": "^0.0.1",
     "@types/gtag.js": "^0.0.2",
     "@types/prettier": "^1.18.3",
     "@types/styled-components": "^4.1.12",
     "babel-plugin-styled-components": "^1.10.6",
     "jsx-to-string-loader": "^1.2.0",
+    "next": "^9.0.3",
     "push-dir": "^0.4.1",
     "tslint": "^5.14.0",
     "typescript": "^3.7.2",
