--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -74,6 +74,11 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-test-renderer": "^16.8.3",
     "@types/styled-components": "^4.1.12",
+    "@wdio/cli": "^5.16.10",
+    "@wdio/local-runner": "^5.16.10",
+    "@wdio/mocha-framework": "^5.16.10",
+    "@wdio/spec-reporter": "^5.16.5",
+    "@wdio/sync": "^5.16.10",
     "babel-jest": "^24.5.0",
     "babel-plugin-styled-components": "^1.10.6",
     "concurrently": "^5.0.0",
@@ -87,6 +92,7 @@
     "styled-components": "^4.3.0",
     "tslint": "^5.14.0",
     "typescript": "^3.7.2",
-    "typescript-styled-plugin": "^0.14.0"
+    "typescript-styled-plugin": "^0.14.0",
+    "wdio-selenium-standalone-service": "0.0.12"
   }
 }
