--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -46,6 +46,7 @@
     "@bigcommerce/big-design-icons": "^0.5.2",
     "@bigcommerce/big-design-theme": "^0.3.1",
     "@types/hoist-non-react-statics": "^3.3.0",
+    "focus-trap": "^5.1.0",
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
     "react-popper": "^1.3.6",
@@ -61,6 +62,7 @@
     "@babel/core": "^7.7.0",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
