--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -43,7 +43,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bigcommerce/big-design-theme": "^0.4.0"
+    "@bigcommerce/big-design-theme": "^0.4.0",
+    "react-uid": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -62,10 +63,10 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/configs": "^0.9.0",
-    "@svgr/core": "^4.3.2",
-    "@svgr/plugin-jsx": "^4.3.2",
-    "@svgr/plugin-prettier": "^4.3.2",
-    "@svgr/plugin-svgo": "^4.3.1",
+    "@svgr/core": "^5.0.1",
+    "@svgr/plugin-jsx": "^5.0.1",
+    "@svgr/plugin-prettier": "^5.0.1",
+    "@svgr/plugin-svgo": "^5.0.1",
     "@types/styled-components": "^4.1.12",
     "babel-plugin-styled-components": "^1.10.6",
     "camelcase": "^5.3.1",
