--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -50,6 +50,7 @@
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
     "react-popper": "^1.3.6",
+    "react-uid": "^2.2.0",
     "scroll-into-view-if-needed": "^2.2.20"
   },
   "peerDependencies": {
