--- a/packages/big-design/tsconfig.json
+++ b/packages/big-design/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["src", "src/**/__tests__", "setupTests.ts"],
-  "exclude": ["dist"]
+  "include": ["src", "src/**/__tests__", "setupTests.ts", "tests"],
+  "exclude": ["dist"],
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@test/utils": ["../tests/utils"]
+    }
+  }
 }
