fix(examples): remove danling comma

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -4,6 +4,6 @@
     "lib": ["dom", "es2015"],
     "jsx": "react",
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
