--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -46,11 +46,11 @@
   "dependencies": {
     "@bigcommerce/big-design-icons": "^0.7.0",
     "@bigcommerce/big-design-theme": "^0.5.0",
+    "downshift": "^5.0.3",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
-    "react-popper": "^1.3.6",
-    "react-uid": "^2.2.0",
-    "scroll-into-view-if-needed": "^2.2.24"
+    "react-popper": "^1.3.7",
+    "react-uid": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
