--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -47,11 +47,11 @@
     "@babel/runtime": "^7.8.7",
     "@bigcommerce/big-design-icons": "^0.9.0",
     "@bigcommerce/big-design-theme": "^0.7.0",
-    "downshift": "^5.0.3",
+    "@popperjs/core": "^2.2.1",
+    "downshift": "^5.0.6",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
-    "popper.js": "^1.16.1",
-    "react-popper": "^1.3.7",
+    "react-popper": "^2.1.0",
     "react-uid": "^2.2.0"
   },
   "peerDependencies": {
