--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,7 +36,7 @@
     "@bigcommerce/big-design-icons": "^0.11.1",
     "@bigcommerce/big-design-theme": "^0.9.0",
     "@popperjs/core": "^2.2.1",
-    "downshift": "^5.2.2",
+    "downshift": "5.2.0",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
     "react-popper": "^2.1.0",
