feat(component): add Tree component

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,3 +4,6 @@
 packages/big-design/src/components/Dropdown/ @jorgemoya
 packages/big-design/src/components/MultiSelect/ @jorgemoya
 packages/big-design/src/components/Select/ @jorgemoya
+
+# Chance's components:
+packages/big-design/src/components/Tree/ @chanceaclark
