--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,6 +36,7 @@
     "@bigcommerce/big-design-icons": "^0.12.0",
     "@bigcommerce/big-design-theme": "^0.10.0",
     "@popperjs/core": "^2.2.1",
+    "react-datepicker": "^2.16.0",
     "downshift": "5.2.2",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
@@ -65,6 +66,7 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.1.8",
     "@types/react": "^16.8.8",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.8.5",
     "@types/react-test-renderer": "^16.8.3",
     "@types/styled-components": "^4.1.12",
