--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -61,6 +61,7 @@
     "@bigcommerce/configs": "^0.14.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.1.8",
     "@types/react": "^16.8.8",
@@ -74,6 +75,7 @@
     "jest-styled-components": "^6.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-test-renderer": "^16.13.1",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
     "typescript": "^3.8.3",
