--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -37,10 +37,11 @@
     "@bigcommerce/big-design-theme": "^0.10.0",
     "@popperjs/core": "^2.2.1",
     "@types/react-datepicker": "^2.11.0",
-    "react-datepicker": "^2.16.0",
+    "date-fns": "^2.14.0",
     "downshift": "5.2.2",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
+    "react-datepicker": "^2.16.0",
     "react-popper": "^2.1.0",
     "react-uid": "^2.2.0"
   },
