--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@bigcommerce/examples",
   "private": true,
-  "version": "0.12.0",
+  "version": "0.13.0-alpha.0",
   "scripts": {
     "start": "parcel index.html",
     "ci": "tsc --noEmit && parcel build index.html"
   },
   "dependencies": {
-    "@bigcommerce/big-design": "^0.25.0",
+    "@bigcommerce/big-design": "^0.26.0-alpha.0",
     "@bigcommerce/big-design-icons": "^0.14.0",
     "@bigcommerce/big-design-theme": "^0.11.0",
     "formik": "^2.0.6",
