--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,10 +36,10 @@
     "@bigcommerce/big-design-icons": "^0.14.1",
     "@bigcommerce/big-design-theme": "^0.11.0",
     "@popperjs/core": "^2.2.1",
-    "@types/react-datepicker": "^2.11.0",
     "downshift": "6.0.6",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
+    "react-beautiful-dnd": "^13.0.0",
     "react-datepicker": "^2.16.0",
     "react-popper": "^2.2.3",
     "react-uid": "^2.2.0"
@@ -68,6 +68,8 @@
     "@types/node": "^13.1.8",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.5",
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-test-renderer": "^16.8.3",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^25.4.0",
