--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "lerna run build --stream",
     "ci": "lerna run ci --stream",
     "diff": "lerna diff",
-    "lint": "eslint . --ext .ts,.tsx,.js && lerna run lint --stream",
+    "lint": "eslint . --ext .ts,.tsx,.js",
     "start": "lerna run start --stream --parallel --ignore @bigcommerce/examples",
     "test": "lerna run test --stream"
   },
