chore: update documentation codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 * @bigcommerce/frontend @bigcommerce/product-design
-packages/docs @bigcommerce/dev-docs-team
+packages/docs @bigcommerce/dev-docs-team @bigcommerce/frontend @bigcommerce/product-design
