--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -37,8 +37,8 @@
     "react-uid": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -54,9 +54,9 @@
     "@svgr/plugin-jsx": "^5.0.1",
     "@svgr/plugin-prettier": "^5.0.1",
     "@svgr/plugin-svgo": "^5.0.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/styled-components": "^5.1.11",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.2",
     "camelcase": "^6.2.0",
     "fs-extra": "^10.0.1",
@@ -66,12 +66,12 @@
     "inquirer-autocomplete-prompt": "^1.3.0",
     "node-fetch": "^2.6.7",
     "prettier": "^2.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.0",
     "tiny-async-pool": "^2.0.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.2",
     "typescript-styled-plugin": "^0.18.1"
   }
 }
