--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -36,8 +36,8 @@
     "polished": "^4.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -50,17 +50,17 @@
     "@bigcommerce/configs": "^0.16.0",
     "@bigcommerce/pack": "^0.2.0",
     "@types/jest": "^27.0.2",
-    "@types/styled-components": "^5.1.11",
+    "@types/styled-components": "^5.1.25",
     "babel-jest": "^28.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-styled-components": "^7.0.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.0",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.2",
     "typescript-styled-plugin": "^0.18.1"
   }
 }
