--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -43,13 +43,13 @@
     "polished": "^4.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^3.6.0",
-    "react-popper": "^2.2.4",
+    "react-popper": "^2.3.0",
     "react-uid": "^2.3.1",
     "zustand": "^3.5.7"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -61,29 +61,29 @@
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.16.0",
     "@bigcommerce/pack": "^0.2.0",
-    "@testing-library/dom": "^8.11.1",
+    "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.0.2",
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.2",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
     "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.11",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "babel-jest": "^28.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-styled-components": "^7.0.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-test-renderer": "^18.1.0",
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.0",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.2",
     "typescript-styled-plugin": "^0.18.1"
   }
 }
