--- a/packages/big-design/tsconfig.json
+++ b/packages/big-design/tsconfig.json
@@ -6,7 +6,7 @@
     "declarationDir": "dist",
     "declarationMap": true,
     "paths": {
-      "@test/utils": ["./tests/utils"]
+      "@test/*": ["tests/*"]
     }
   },
   "include": ["src", "setupTests.ts", "tests"]
