--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -76,6 +76,7 @@
     "babel-jest": "^27.2.5",
     "babel-plugin-styled-components": "^2.0.2",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "jest-styled-components": "^7.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
