--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/pack",
-  "version": "0.1.1-alpha.1",
+  "version": "0.2.0",
   "private": true,
   "license": "(MIT AND CC-BY-3.0)",
   "bin": {
