--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,6 +36,7 @@
     "@bigcommerce/big-design-icons": "^0.18.0",
     "@bigcommerce/big-design-theme": "^0.14.0",
     "@popperjs/core": "^2.5.4",
+    "@tanstack/react-table": "8.0.0-beta.8",
     "@types/react-datepicker": "^3.1.5",
     "date-fns": "2.28.0",
     "downshift": "6.1.7",
