--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@bigcommerce/eslint-config": "^2.4.0",
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/babel__standalone": "^7.1.4",
     "eslint": "^8.11.0",
     "husky": "^7.0.4",
     "lerna": "^4.0.0",
