--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -35,22 +35,22 @@
     "@babel/runtime": "^7.15.4",
     "@bigcommerce/big-design-icons": "^0.20.1",
     "@bigcommerce/big-design-theme": "^0.16.1",
-    "@popperjs/core": "^2.5.4",
+    "@popperjs/core": "^2.11.6",
     "@types/react-datepicker": "^4.4.2",
     "date-fns": "2.29.2",
     "downshift": "6.1.9",
     "focus-trap": "^7.0.0",
     "polished": "^4.0.0",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
-    "react-popper": "^2.2.4",
+    "react-popper": "^2.3.0",
     "react-uid": "^2.3.1",
     "zustand": "^4.1.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "styled-components": "^5.3.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
@@ -63,27 +63,27 @@
     "@bigcommerce/pack": "^0.2.0",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.3.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^16.0.0",
-    "@types/react": "^17.0.2",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^18.0.20",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^18.0.6",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.11",
+    "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.0.2",
-    "babel-plugin-styled-components": "^2.0.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.2",
-    "jest-styled-components": "^7.0.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
+    "jest-styled-components": "^7.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "^3.0.2",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.3",
-    "typescript-styled-plugin": "^0.18.1"
+    "typescript-styled-plugin": "^0.18.2"
   }
 }
