--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -36,8 +36,8 @@
     "polished": "^4.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
