--- a/packages/big-design-theme/tsconfig.json
+++ b/packages/big-design-theme/tsconfig.json
@@ -8,6 +8,6 @@
     "module": "esnext",
     "target": "esnext"
   },
-  "include": ["src"],
+  "include": ["src", "setupTests.ts"],
   "exclude": ["dist"],
 }
