--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -76,6 +76,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-fail-on-console": "^3.1.1",
     "jest-styled-components": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
