--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,7 +11,7 @@
     "directory": "packages/docs"
   },
   "scripts": {
-    "build": "next build && next export",
+    "build": "next build",
     "deploy": "yarn run build && touch out/.nojekyll && push-dir --dir=out --branch=gh-pages --verbose",
     "start": "next",
     "typeCheck": "tsc --noEmit"
@@ -45,7 +45,7 @@
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "jsx-to-string-loader": "^1.2.0",
-    "next": "^12.0.8",
+    "next": "^13.3.0",
     "push-dir": "^0.4.1",
     "typescript": "^4.4.3",
     "typescript-styled-plugin": "^0.18.2"
