--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -14,7 +14,7 @@
     "build": "yarn run build:cjs && yarn run build:es && yarn run build:dt",
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
-    "build:dt": "tsc --emitDeclarationOnly",
+    "build:dt": "tsc -p tsconfig.declarations.json --emitDeclarationOnly",
     "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run test && yarn run build",
     "prepack": "big-design-prepack",
     "postpack": "big-design-postpack",
