--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,11 @@ updates:
     schedule:
       interval: 'weekly'
       day: 'tuesday'
+    ignore:
+        # Next major version is exported as an ESM module
+        - dependency-name: 'node-fetch'
+          update-types: ['version-update:semver-major']
+        - dependency-name: 'inquirer'
+          update-types: ['version-update:semver-major']
+        - dependency-name: 'inquirer-autocomplete-prompt'
+          update-types: ['version-update:semver-major']
