--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -38,7 +38,7 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
@@ -60,7 +60,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.8",
+    "stylis": "^4.3.1",
     "typescript": "^5.3.3",
     "typescript-styled-plugin": "^0.18.2"
   }
