--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -49,7 +49,7 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
@@ -77,12 +77,13 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fail-on-console": "^3.1.1",
-    "jest-styled-components": "^7.1.1",
+    "jest-styled-components": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.8",
+    "stylis": "^4.3.1",
     "typescript": "^5.3.3",
     "typescript-styled-plugin": "^0.18.2"
   }
