--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -32,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^3.1.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.8",
+    "stylis": "^4.3.1"
   },
   "devDependencies": {
     "@bigcommerce/configs": "^0.19.1",
