--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -14,7 +14,8 @@
     "formik": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.8",
+    "stylis": "^4.3.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
